# pico-c-ssd1306

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  copy_uf2.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
lib/: CMakeLists.txt
lib/include/pico_ssd1306/: communication.h  defines.h  font.h  helpers.h  renderer.h  ssd1306.h  ssd1306_commands.h  types.h
lib/include/pico_ssd1306/bitmaps/: ssd1306_test_bitmap.h  ssd1306_test_segmented_bitmap.h
lib/include/pico_ssd1306/resources/: font_8bit.h  ssd1306_font_8bit.h  ssd1306_test_bitmap.h
lib/src/: communication.c  helpers.c  renderer.c  ssd1306.c
resources/8bit_font_bitmaps/: !.h  ".h  #.h  $.h  %.h  &.h  (.h  ).h  *.h  +.h  ,.h  -.h  0.h  1.h  2.h  3.h  4.h  5.h  6.h  7.h  8.h  9.h  :.h  ;.h  <.h  =.h  >.h  ?.h  @.h  A.h  B.h  C.h  D.h  E.h  F.h  G.h  H.h  I.h  J.h  K.h  (+29 more)
src/: example.c
tools/: common.py  convert_font_to_bitmaps.py  convert_to_bitmap.py  reverse_bitmap_bits.py
